--- a/public/index.html
+++ b/public/index.html
@@ -13,17 +13,39 @@
     <!-- initialize the SDK after all desired features are loaded -->
     <script defer src="/__/firebase/init.js"></script>
 
-    <script defer src="js/main.js"></script>
 
     <!-- Styling -->
     <link rel="stylesheet" href="css/style.css">
+
+    <!-- jQuery -->
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+
+    <!-- Bootstrap -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
   </head>
   <body>
-    <!-- Map Div -->
-    <div id="map"></div>
-    <!-- Map API call to Google Maps -->
+    <div class='row no-gutters' style='height: 100%;'>
+      <!-- Map column -->
+      <div class='col-8'>
+        <!-- Map Div -->
+        <div id='map'></div>
+      </div>
+
+      <!-- Data column -->
+      <div class='col-4'>
+        <div id='accordian'>
+          <!-- Cards go here -->
+        </div>
+      </div>
+
+    </div>
+
+        <!-- Map API call to Google Maps -->
     <script async defer 
       src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAxHb3swgrFfk3b4QyOYXAj7xpT9-PWjgg&callback=initMap">
     </script>
+    <script defer src="js/main.js"></script>
   </body>
 </html>
